--- a/backend/src/main/resources/mail/enterprise/enterprise-report.html
+++ b/backend/src/main/resources/mail/enterprise/enterprise-report.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>MeterSphere</title>
+    <title>MIC-MeterSphere</title>
 </head>
 <body>
 #{reportData}
